# AdvCmpEx

./: .clang-format  AdvCmpEng.lng  AdvCmpExEng.lng  AdvCmpRus.hlf  AdvCmpRus.lng  CMakeLists.txt  LICENSE  README.md  Readme.txt  WhatsNewRus.txt
SRC/: AdvCmp.cpp  AdvCmp.hpp  AdvCmpDlgOpt.cpp  AdvCmpDlgOpt.hpp  AdvCmpLng.hpp  AdvCmpProc.cpp  AdvCmpProc.hpp  AdvCmpProcCur.cpp  AdvCmpProcCur.hpp  AdvCmpProc_CLIST.cpp  AdvCmpProc_DUP.cpp  AdvCmpProc_SYNC.cpp  CompilePlugVC.bat  CompilePlugVCx64.bat  DList.hpp  farcolor.hpp  farkeys.hpp  plugin.hpp
src/: AdvCmp.cpp  AdvCmp.hpp  AdvCmpDlgOpt.cpp  AdvCmpDlgOpt.hpp  AdvCmpExEng.lng  AdvCmpExRus.hlf  AdvCmpExRus.hlf.in  AdvCmpExRus.lng  AdvCmpLng.hpp  AdvCmpProc.cpp  AdvCmpProc.hpp  AdvCmpProc_CLIST.cpp  AdvCmpProc_DUP.cpp  AdvCmpProc_SYNC.cpp  CMakeLists.txt  CompilePlugVC.bat  CompilePlugVCx64.bat  vcxproj.7z  version.hpp
